# safetylora

./: .gitignore  chat_compare.py  check_env.py  data_loader.py  data_prep.py  eval.py  evaluate.py  pyproject.toml  reward.py  synthetic_dataset.py  train_grpo.py  train_sft.py
configs/: accelerate_local.yaml  accelerate_runpod.yaml  grpo_local_example.yaml  sft_local_example.yaml  sft_runpod_qwen3-4b.yaml
datagen/: __init__.py  assemble_final_dataset.py  convert_policy_to_jsonl.py  convert_seeds_to_jsonl.py  datagen.py  filter_judge_errors.py  intentseeds.jsonl  intentseeds.md  intentseeds_test.jsonl  judge.py  llm.py  prepare_dataset.py  prompt_intentgen.md  prompts.py  run_assistant_turns.py  run_filter.py  run_judge.py  run_safetyrewrite.py  safetypolicy.jsonl  safetypolicy.md  safetyrewrite.py  sysprompts.jsonl  userturns.jsonl  userturns_test.jsonl
evals/: example_eval.yaml
evals/judges/: eval_fns.py
evals/prompts/: safety_basic.json
